<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transactions">Transactions</string>
    <string name="wallet">Wallet</string>
    <string name="analytics">Analytics</string>
    <string name="more">More</string>
    <string name="reminder">Reminder</string>
    <string name="categories">Categories</string>
    <string name="budget">Budget</string>
    <string name="new_category">New Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_details">Category details</string>
    <string name="category_info">Category Info</string>
    <string name="delete_category">Delete category</string>
    <string name="delete_category_alert">Confirm to delete?</string>
    <string name="please_enter_category_name">Please Enter Category Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">+Add</string>
    <string name="moon">moon</string>
    <string name="_00">00</string>
    <string name="colon">:</string>
    <string name="back">back</string>
    <string name="done">done</string>
    <string name="sun">sun</string>
    <string name="_00_00">00:00</string>
    <string name="day">day</string>
    <string name="local_notifications">Local notifications</string>
    <string name="local_notifications_0">Local notifications: 0</string>
    <string name="cycle">Cycle</string>
    <string name="pick_cycle">Pick cycle</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="choose_cycle_infinity">Choose cycle (infinity)</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="annually">Annually</string>
    <string name="input_budget">Input Budget</string>
</resources>